--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ h1,h2,h3,h4,h5,h6 {
   padding: 0;
 }
 
+h3 {
+  text-align: center;
+}
+
 input {
   font-size: 0.75em;
   border: 1px solid #000;
@@ -21,10 +25,12 @@ ol{
 header {
   margin-bottom: 1em;
 }
+
 main {
   width: 50%;
   margin: 0 auto;
 }
+
 footer {
 
 }
